--- a/.github/workflow/node.js.yml
+++ b/.github/workflow/node.js.yml
@@ -1,1 +1,20 @@
 
+name: Node.js CI
+on:
+ push:
+  branches: [main]
+  pull_request:
+  branches: [main]
+
+jobs:
+   build:
+    runs-on: self-hosted
+   steps:
+     -uses: actions/checkout@v2
+     -name: Use Node.js from ${{matrix.node-version}}
+   uses: actions/setup-node@v1
+    with:
+       node-version: ${{matrix.node-version}} 
+   -run: |
+      npm i
+      npm run build
